Fix build against GTK+ 2.0 https://bugs.webkit.org/show_bug.cgi?id=117895

Patch by Dominique Leuenberger <dimstar@opensuse.org> on 2013-07-10
Reviewed by Martin Robinson.

GTK2 build fails for undefined GDK_IS_X11_DISPLAY
GTK 2.0 does define GDK_WINDOWING_X11,but GDK_IS_X11_DISPLAY is not
present in GTK+ 2.0. A dummy defines is sufficient, as GTK 2.0 is not
that multiple backend aware anyway...

* platform/gtk/GtkVersioning.h: Define GDK_IS_X11_DISPLAY for GTK+ 2.0
  and compatibility for gtk_widget_get_preferred_size()
* plugins/gtk/gtk2xtbin.c: Include config.h

Canonical link: https://commits.webkit.org/136499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152552 268f45cc-cd09-0410-ab3c-d52691b4dbfc